<resources>
    <string name="app_name">FavDish</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="splash_screen_title">Fav Dish</string>
    <string name="add_dish">Add Dish</string>

    <string name="ibl_title">Title</string>
    <string name="ibl_type">Type</string>
    <string name="ibl_category">Category</string>
    <string name="ibl_ingredients">Ingredients</string>
    <string name="ibl_cooking_time_in_minutes">Cooking time in minutes</string>
    <string name="ibl_direction_to_cook">Direction to cook</string>

    <string name="title_select_image_action">Select Image Action</string>
    <string name="ibl_camera">Camera</string>
    <string name="ibl_gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="err_msg_select_dish_image">Select Dish Image</string>
    <string name="err_msg_enter_dish_title">Enter Dish Title</string>
    <string name="err_msg_select_dish_type">Select Dish Type</string>
    <string name="err_msg_select_dish_category">Select Dish Category</string>
    <string name="err_msg_enter_dish_ingredients">Enter Dish Ingredients</string>
    <string name="err_msg_select_dish_cooking_time">Select Dish Cooking Time</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter Dish Cooking Instructions</string>
</resources>