<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateDishActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/tb_add_dish_activity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:fillViewport="true"
      android:scrollbars="none"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tb_add_dish_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread_inside">

      <FrameLayout
          android:id="@+id/fl_select_image"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_200sdp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_dish_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#212121"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_add_dish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:padding="@dimen/_16sdp"
            app:srcCompat="@drawable/ic_add_a_photo" />

      </FrameLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_title"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:hint="@string/ibl_title"
          app:hintTextColor="@color/purple_700"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/fl_select_image">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_15sdp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_type"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:hint="@string/ibl_type"
          app:hintTextColor="@color/purple_700"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_title">

        <EditText
            android:id="@+id/et_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_15sdp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_category"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:hint="@string/ibl_category"
          app:hintTextColor="@color/purple_700"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_type">

        <EditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_15sdp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_ingredients"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:hint="@string/ibl_ingredients"
          app:hintTextColor="@color/purple_700"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_category">

<!--        <EditText-->
<!--            android:id="@+id/et_ingredients"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:focusable="false"-->
<!--            android:focusableInTouchMode="false"-->
<!--            android:inputType="text"-->
<!--            android:textColor="@color/grey_900"-->
<!--            android:textSize="@dimen/_15sdp" />-->
        <EditText
            android:id="@+id/et_ingredients"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_cooking_time_in_minutes"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:hint="@string/ibl_cooking_time_in_minutes"
          app:hintTextColor="@color/purple_700"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_ingredients">

        <EditText
            android:id="@+id/et_cooking_time_in_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_15sdp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_direction_to_cook"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:hint="@string/ibl_direction_to_cook"
          app:hintTextColor="@color/purple_700"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_cooking_time_in_minutes">

        <EditText
            android:id="@+id/et_direction_to_cook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_15sdp" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/btn_add_dish"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="Add Dish"
          android:layout_marginStart="@dimen/_16sdp"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/til_direction_to_cook"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>